--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Visitantes do Site</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meu Site com Contador</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 50px;
+      background: #f0f0f0;
+    }
+    h1 {
+      color: #333;
+    }
+    .contador {
+      margin-top: 30px;
+      font-size: 18px;
+      color: #666;
+    }
+  </style>
 </head>
-<body style="font-family:sans-serif; text-align:center; padding:50px;">
-  <h1>Bem-vindo ao meu site!</h1>
-  <p>Este site conta e mostra a localização dos visitantes usando o Counter.dev</p>
+<body>
 
-  <!-- Script do contador -->
-  <script src="https://cdn.counter.dev/script.js"
-          data-id="ccb47fbe-cead-468c-a015-c54585676566"
+  <h1>Bem-vindo ao meu site!</h1>
+  <p>Aqui você está sendo contado 😄</p>
+
+  <!-- Script do contador.dev -->
+  <script src="https://cdn.counter.dev/script.js" 
+          data-id="ccb47fbe-cead-468c-a015-c54585676566" 
           data-utcoffset="-3">
   </script>
+
 </body>
 </html>
